# fscopymon

./: .gitignore  Cargo.toml  README.md  fscopymon.json
src/: config.rs  daemon.rs  file_operations.rs  main.rs  watcher.rs
