[package]
name = "fscopymon"
version = "0.2.2"
edition = "2021"

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
notify = "7.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.20"
env_logger = "0.11.5"
ctrlc = "3.4.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_System_Threading"] }

[target.'cfg(unix)'.dependencies]
nix = "0.29.0"
